--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^5.0.5",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
 		"firebase": "^10.5.0",
@@ -22,6 +23,7 @@
 		"styled-components": "^5.3.11"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.0.5",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
