--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.0.5",
+		"@tanstack/react-query-devtools": "^5.4.2",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
 		"firebase": "^10.5.0",
