--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.11.0",
 		"react-router-dom": "^6.17.0",
+		"react-social-icons": "^6.6.0",
 		"styled-components": "^5.3.11"
 	},
 	"devDependencies": {
