--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@tanstack/react-query-devtools": "^5.4.2",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
+		"emoji-picker-react": "^4.5.16",
 		"firebase": "^10.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
