--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@tanstack/react-query": "^5.0.5",
 		"@tanstack/react-query-devtools": "^5.4.2",
+		"@types/react-lazy-load-image-component": "^1.6.3",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
 		"emoji-picker-react": "^4.5.16",
@@ -22,6 +23,7 @@
 		"react-hook-form": "^7.47.0",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.11.0",
+		"react-lazy-load-image-component": "^1.6.0",
 		"react-router-dom": "^6.17.0",
 		"react-social-icons": "^6.6.0",
 		"styled-components": "^5.3.11"
