--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react-lazy-load-image-component": "^1.6.3",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
+		"dotenv": "^16.3.1",
 		"emoji-picker-react": "^4.5.16",
 		"firebase": "^10.5.0",
 		"react": "^18.2.0",
