--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"test": "vitest",
+		"coverage": "vitest run --coverage",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -31,6 +33,8 @@
 	},
 	"devDependencies": {
 		"@tanstack/eslint-plugin-query": "^5.0.5",
+		"@testing-library/jest-dom": "^6.2.0",
+		"@testing-library/react": "^14.1.2",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -39,7 +43,9 @@
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"happy-dom": "^12.10.3",
 		"typescript": "^5.0.2",
-		"vite": "^4.4.5"
+		"vite": "^4.4.5",
+		"vitest": "^1.1.3"
 	}
 }
