--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@tanstack/react-query": "^5.0.5",
 		"@tanstack/react-query-devtools": "^5.4.2",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/react-lazy-load-image-component": "^1.6.3",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
